# cargo-static-registry-rfc-proof-of-concept

./: Cargo.toml  README.md  cf-worker.js
src/: main.rs
